--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
-  "name": "URL-UploadBot V3 🚀",
-  "description": "Telegram Uploader Bot V3 🚀 File/Video",
-  "logo": "https://te.legra.ph/file/82c925ccc38606d837831.jpg",
+  "name": "X-URL-Uploader",
+  "description": "Telegram Bot to Upload URLs to Telegram as File and Video.",
   "keywords": [
     "telegram",
     "best",
@@ -15,55 +14,56 @@
     "remote",
     "uploader"
   ],
-  "success_url": "http://t.me/Hx_URLuploadBot",
-  "website": "https://github.com/oVo-HxBots",
-  "repository": "https://github.com/oVo-HxBots/URL-UploadBot",
-
+  "success_url": "https://t.me/xurluploaderbot",
+  "website": "https://github.com/X-Gorn",
+  "repository": "https://github.com/X-Gorn/X-URL-Uploader",
   "env": {
     "WEBHOOK": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode",
       "value": "ANYTHING"
     },
-
     "BOT_TOKEN": {
       "description": "Your bot token, as a string.",
       "value": ""
     },
-
     "API_ID": {
       "description": "Get this value from https://my.telegram.org",
       "value": ""
     },
-
     "API_HASH": {
       "description": "Get this value from https://my.telegram.org",
       "value": ""
     },
-
-    "OWNER_ID": {
-      "description": "Your Telegram ID",
-      "value": ""
+    "AUTH_USERS": {
+      "description": "allow only pre-defined users to use this bot (your id).",
+      "value": "87371682 98736827 72736723"
     },
-    
-    "DATABASE_URL": {
-      "description": "Your MongoDB URI",
-      "value": ""
+    "DEF_THUMB_NAIL_VID_S": {
+      "description": "default thumbnail to be used in the videos. Incase, youtube-dl is unable to find a thumbnail.",
+      "value": "",
+      "required": false
+    },
+    "CHUNK_SIZE": {
+      "description": "chunk size that should be used with requests",
+      "value": "128"
+    },
+    "HTTP_PROXY": {
+      "description": "proxy for accessing youtube-dl in GeoRestricted Areas. Get your own proxy from https://github.com/rg3/youtube-dl/issues/1091#issuecomment-230163061",
+      "value": "",
+      "required": false
     }
-
   },
-
-  "addons": [ ],
-  "buildpacks": [
-  {
+  "addons": [
+  ],
+  "buildpacks": [{
     "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-  },
-  {
+  }, {
     "url": "heroku/python"
   }],
   "formation": {
-     "worker": {
-       "quantity": 1,
-       "size": "free"
-     }
+    "worker": {
+      "quantity": 1,
+      "size": "free"
+    }
   }
 }
