--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,15 @@ beautifulsoup4
 hachoir
 numpy
 Pillow
-pyrogram==1.3.6
 requests
-tgcrypto
 yt-dlp
 olefile
 lk21
 filetype
 tldextract
+aiofiles
+humanize
+motor
+pyrogram==2.0.35
+TgCrypto
+dnspython
